// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dropdown list matches the snapshot (disabled) 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c9 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover {
  background-color: #DBDEE1;
}

.c10::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c11 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c1 {
  position: relative;
}

.c8 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #B7BBC2;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-expanded="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c4"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c5"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-up c6"
      data-testid="arrow"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c7 c8 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c9"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c10 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Alberta"
            >
              Alberta
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="British Columbia"
            >
              British Columbia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Manitoba"
            >
              Manitoba
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="New Brunswick"
            >
              New Brunswick
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Newfoundland and Labrador"
            >
              Newfoundland and Labrador
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Northwest Territories"
            >
              Northwest Territories
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Nova Scotia"
            >
              Nova Scotia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Nunavut"
            >
              Nunavut
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Ontario"
            >
              Ontario
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Prince Edward Island"
            >
              Prince Edward Island
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Quebec"
            >
              Quebec
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Saskatchewan"
            >
              Saskatchewan
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c12"
              data-text="Yukon"
            >
              Yukon
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (icon) 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c9 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c11 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c13 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c1 {
  position: relative;
}

.c10 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

.c6 {
  color: #60666E;
  margin-right: var(--spacing-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <span
    class="c4"
    id="uuid1_hint"
  >
    Hint
  </span>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-describedby="uuid1_hint"
    aria-expanded="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c5"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-menu c6"
      data-testid="textbox-icon"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 5h16"
      />
      <path
        d="M4 12h16"
      />
      <path
        d="M4 19h16"
      />
    </svg>
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c7"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-up c8"
      data-testid="arrow"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c9 c10 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c11"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Alberta"
            >
              Alberta
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="British Columbia"
            >
              British Columbia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Manitoba"
            >
              Manitoba
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="New Brunswick"
            >
              New Brunswick
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Newfoundland and Labrador"
            >
              Newfoundland and Labrador
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Northwest Territories"
            >
              Northwest Territories
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Nova Scotia"
            >
              Nova Scotia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Nunavut"
            >
              Nunavut
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Ontario"
            >
              Ontario
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Prince Edward Island"
            >
              Prince Edward Island
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Quebec"
            >
              Quebec
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Saskatchewan"
            >
              Saskatchewan
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Yukon"
            >
              Yukon
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (invalid) 1`] = `
.c4 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c9 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c11 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c13 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c1 {
  position: relative;
}

.c10 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c6:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <span
    class="c4"
    data-testid="invalid-field"
    id="uuid1_invalid"
  >
    <svg
      class="lucide lucide-octagon-alert c5"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 16h.01"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
      />
    </svg>
    You must select an option
  </span>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-describedby="uuid1_invalid"
    aria-expanded="true"
    aria-invalid="true"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c6"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c7"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-up c8"
      data-testid="arrow"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c9 c10 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c11"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Alberta"
            >
              Alberta
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="British Columbia"
            >
              British Columbia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Manitoba"
            >
              Manitoba
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="New Brunswick"
            >
              New Brunswick
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Newfoundland and Labrador"
            >
              Newfoundland and Labrador
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Northwest Territories"
            >
              Northwest Territories
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Nova Scotia"
            >
              Nova Scotia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Nunavut"
            >
              Nunavut
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Ontario"
            >
              Ontario
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Prince Edward Island"
            >
              Prince Edward Island
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Quebec"
            >
              Quebec
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Saskatchewan"
            >
              Saskatchewan
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c15 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c14"
              data-text="Yukon"
            >
              Yukon
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (mobile) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c7 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c9 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c1 {
  position: relative;
}

.c6 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2halfx);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-expanded="true"
    aria-invalid="false"
    aria-label="Select an option"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c2"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c3"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-up c4"
      data-testid="arrow"
      fill="none"
      focusable="false"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c5 c6 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c7"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Alberta"
            >
              Alberta
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="British Columbia"
            >
              British Columbia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Manitoba"
            >
              Manitoba
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="New Brunswick"
            >
              New Brunswick
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Newfoundland and Labrador"
            >
              Newfoundland and Labrador
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Northwest Territories"
            >
              Northwest Territories
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Nova Scotia"
            >
              Nova Scotia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Nunavut"
            >
              Nunavut
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Ontario"
            >
              Ontario
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Prince Edward Island"
            >
              Prince Edward Island
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Quebec"
            >
              Quebec
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Saskatchewan"
            >
              Saskatchewan
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c10"
              data-text="Yukon"
            >
              Yukon
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (multiselect) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c7 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c11 {
  color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c9:hover {
  background-color: #DBDEE1;
  border: 1px solid #000000;
}

.c9 > .c10 {
  display: none;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c12 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c1 {
  position: relative;
}

.c6 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x) 0 0;
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <div
    aria-controls="uuid1_listbox"
    aria-expanded="true"
    aria-invalid="false"
    aria-label="Select an option"
    aria-labelledby="uuid1_label"
    aria-readonly="false"
    aria-required="false"
    class="c2"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value=""
    />
    <div
      class="c3"
      data-testid="tag-wrapper"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-up c4"
      data-testid="arrow"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-labelledby="uuid1_label"
      aria-multiselectable="true"
      class="c5 c6 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c7"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Alberta"
            >
              Alberta
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="British Columbia"
            >
              British Columbia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Manitoba"
            >
              Manitoba
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="New Brunswick"
            >
              New Brunswick
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Newfoundland and Labrador"
            >
              Newfoundland and Labrador
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Northwest Territories"
            >
              Northwest Territories
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Nova Scotia"
            >
              Nova Scotia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Nunavut"
            >
              Nunavut
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Ontario"
            >
              Ontario
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Prince Edward Island"
            >
              Prince Edward Island
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Quebec"
            >
              Quebec
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Saskatchewan"
            >
              Saskatchewan
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="lucide lucide-check c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Yukon"
            >
              Yukon
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c8 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c10 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c12 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c1 {
  position: relative;
}

.c9 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <span
    class="c4"
    id="uuid1_hint"
  >
    Hint
  </span>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-describedby="uuid1_hint"
    aria-expanded="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c5"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c6"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-up c7"
      data-testid="arrow"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c8 c9 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c10"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Alberta"
            >
              Alberta
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="British Columbia"
            >
              British Columbia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Manitoba"
            >
              Manitoba
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="New Brunswick"
            >
              New Brunswick
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Newfoundland and Labrador"
            >
              Newfoundland and Labrador
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Northwest Territories"
            >
              Northwest Territories
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Nova Scotia"
            >
              Nova Scotia
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Nunavut"
            >
              Nunavut
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Ontario"
            >
              Ontario
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Prince Edward Island"
            >
              Prince Edward Island
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Quebec"
            >
              Quebec
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Saskatchewan"
            >
              Saskatchewan
            </span>
          </span>
        </li>
        <li
          aria-selected="false"
          class="c14 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
          >
            <span
              class="c13"
              data-text="Yukon"
            >
              Yukon
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
